mips_cpu/error
g++ -g -Wall -std=c++11    -c -o processor.o processor.cpp
In file included from processor.h:7,
                 from processor.cpp:4:
physical_reg.h: In member function ‘void PhysicalRegisterUnit::completeROBEntry(int, uint32_t)’:
physical_reg.h:191:44: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<PhysicalRegisterUnit::ROBEntry>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
  191 |             if (rob_index < 0 || rob_index >= reorderBuffer.size())
      |                                  ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
In file included from processor.cpp:5:
physical_reg.h: At global scope:
physical_reg.h:23:7: error: redefinition of ‘class PhysicalRegisterUnit’
   23 | class PhysicalRegisterUnit {
      |       ^~~~~~~~~~~~~~~~~~~~
physical_reg.h:23:7: note: previous definition of ‘class PhysicalRegisterUnit’
   23 | class PhysicalRegisterUnit {
      |       ^~~~~~~~~~~~~~~~~~~~
processor.cpp: In member function ‘void Processor::rename()’:
processor.cpp:201:14: error: jump to case label
  201 |         case 1:
      |              ^
processor.cpp:195:17: note:   crosses initialization of ‘int available_station_a’
  195 |             int available_station_a = nextState.checkStationsArith();
      |                 ^~~~~~~~~~~~~~~~~~~
processor.cpp:220:9: error: ‘old_phsy_reg’ was not declared in this scope; did you mean ‘old_phys_reg’?
  220 |         old_phsy_reg = nextState.physRegFile.getMapping(write_reg);
      |         ^~~~~~~~~~~~
      |         old_phys_reg
processor.cpp:229:31: error: ‘PhysicalRegisterUnit::RAT PhysicalRegisterUnit::RAT_Unit’ is private within this context
  229 |         nextState.physRegFile.RAT_Unit.updateMapping(write_reg, new_phys_reg);
      |                               ^~~~~~~~
physical_reg.h:71:13: note: declared private here
   71 |         RAT RAT_Unit;
      |             ^~~~~~~~
processor.cpp:245:23: error: ‘class Processor::State’ has no member named ‘push_to_rs’
  245 |             nextState.push_to_rs();
      |                       ^~~~~~~~~~
processor.cpp:248:23: error: ‘class Processor::State’ has no member named ‘push_to_rs’
  248 |             nextState.push_to_rs();
      |                       ^~~~~~~~~~
processor.cpp:252:5: error: ‘pushToROB’ was not declared in this scope
  252 |     pushToROB(toBeSent);
      |     ^~~~~~~~~
processor.cpp:224:9: warning: unused variable ‘phys_rs’ [-Wunused-variable]
  224 |     int phys_rs = rs != 0 ? nextState.physRegFile.getMapping(rs) : 0;
      |         ^~~~~~~
processor.cpp:225:9: warning: unused variable ‘phys_rt’ [-Wunused-variable]
  225 |     int phys_rt = rt != 0 ? nextState.physRegFile.getMapping(rt) : 0;
      |         ^~~~~~~
make: *** [<builtin>: processor.o] Error 1
